[package]
name = "winzmx"
version = "0.1.0"
edition = "2021"

[dependencies]
libzmx = { path = "../libzmx" }
once_cell = { version = "1.17" }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = { version = "0.1" }
